models/DECORATEParser.py
# Generated from DECORATE.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DECORATEParser ( Parser ):

    grammarFileName = "DECORATE.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ACTOR'", "'actor'", "':'", "'{'", "'}'", 
                     "'.'", "','", "';'", "'States'", "'Stop'", "'Loop'", 
                     "'Goto'", "'BRIGHT'", "'Bright'", "'bright'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ENABLED", "NUMBER", "BOOLEAN_VALUE", 
                      "SINGLE_CHAR", "QUOTED_STRING", "KEYWORD", "BLOCKCOMMENT", 
                      "LINECOMMENT", "WS" ]

    RULE_actors = 0
    RULE_block = 1
    RULE_pair = 2
    RULE_keyword = 3
    RULE_states = 4
    RULE_state_block = 5
    RULE_state_stop = 6
    RULE_state_loop = 7
    RULE_state_goto = 8
    RULE_label = 9
    RULE_state_command = 10
    RULE_image_modifier = 11
    RULE_image = 12
    RULE_variant = 13
    RULE_ticks = 14
    RULE_name = 15
    RULE_function = 16
    RULE_uid = 17
    RULE_parent = 18
    RULE_value = 19

    ruleNames =  [ "actors", "block", "pair", "keyword", "states", "state_block", 
                   "state_stop", "state_loop", "state_goto", "label", "state_command", 
                   "image_modifier", "image", "variant", "ticks", "name", 
                   "function", "uid", "parent", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    ENABLED=18
    NUMBER=19
    BOOLEAN_VALUE=20
    SINGLE_CHAR=21
    QUOTED_STRING=22
    KEYWORD=23
    BLOCKCOMMENT=24
    LINECOMMENT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ActorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DECORATEParser.EOF, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECORATEParser.BlockContext)
            else:
                return self.getTypedRuleContext(DECORATEParser.BlockContext,i)


        def getRuleIndex(self):
            return DECORATEParser.RULE_actors

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActors" ):
                listener.enterActors(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActors" ):
                listener.exitActors(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActors" ):
                return visitor.visitActors(self)
            else:
                return visitor.visitChildren(self)




    def actors(self):

        localctx = DECORATEParser.ActorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_actors)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DECORATEParser.T__0 or _la==DECORATEParser.T__1:
                self.state = 40
                self.block()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(DECORATEParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(DECORATEParser.NameContext,0)


        def parent(self):
            return self.getTypedRuleContext(DECORATEParser.ParentContext,0)


        def uid(self):
            return self.getTypedRuleContext(DECORATEParser.UidContext,0)


        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECORATEParser.PairContext)
            else:
                return self.getTypedRuleContext(DECORATEParser.PairContext,i)


        def states(self):
            return self.getTypedRuleContext(DECORATEParser.StatesContext,0)


        def getRuleIndex(self):
            return DECORATEParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DECORATEParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not(_la==DECORATEParser.T__0 or _la==DECORATEParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 49
            self.name()
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DECORATEParser.T__2:
                self.state = 50
                self.match(DECORATEParser.T__2)
                self.state = 51
                self.parent()


            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DECORATEParser.NUMBER:
                self.state = 54
                self.uid()


            self.state = 57
            self.match(DECORATEParser.T__3)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DECORATEParser.ENABLED or _la==DECORATEParser.KEYWORD:
                self.state = 58
                self.pair()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DECORATEParser.T__8:
                self.state = 64
                self.states()


            self.state = 67
            self.match(DECORATEParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword(self):
            return self.getTypedRuleContext(DECORATEParser.KeywordContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECORATEParser.ValueContext)
            else:
                return self.getTypedRuleContext(DECORATEParser.ValueContext,i)


        def parent(self):
            return self.getTypedRuleContext(DECORATEParser.ParentContext,0)


        def ENABLED(self):
            return self.getToken(DECORATEParser.ENABLED, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = DECORATEParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DECORATEParser.KEYWORD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 69
                    self.parent()
                    self.state = 70
                    self.match(DECORATEParser.T__5)


                self.state = 74
                self.keyword()
                self.state = 75
                self.value()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DECORATEParser.T__6:
                    self.state = 76
                    self.match(DECORATEParser.T__6)
                    self.state = 77
                    self.value()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DECORATEParser.ENABLED]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(DECORATEParser.ENABLED)
                self.state = 84
                self.keyword()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DECORATEParser.T__7:
                    self.state = 85
                    self.match(DECORATEParser.T__7)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(DECORATEParser.KEYWORD, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyword" ):
                listener.enterKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyword" ):
                listener.exitKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword" ):
                return visitor.visitKeyword(self)
            else:
                return visitor.visitChildren(self)




    def keyword(self):

        localctx = DECORATEParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_keyword)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(DECORATEParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECORATEParser.State_blockContext)
            else:
                return self.getTypedRuleContext(DECORATEParser.State_blockContext,i)


        def getRuleIndex(self):
            return DECORATEParser.RULE_states

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStates" ):
                listener.enterStates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStates" ):
                listener.exitStates(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStates" ):
                return visitor.visitStates(self)
            else:
                return visitor.visitChildren(self)




    def states(self):

        localctx = DECORATEParser.StatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_states)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(DECORATEParser.T__8)
            self.state = 93
            self.match(DECORATEParser.T__3)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECORATEParser.T__9) | (1 << DECORATEParser.T__10) | (1 << DECORATEParser.T__11) | (1 << DECORATEParser.KEYWORD))) != 0):
                self.state = 94
                self.state_block()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(DECORATEParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(DECORATEParser.LabelContext,0)


        def state_command(self):
            return self.getTypedRuleContext(DECORATEParser.State_commandContext,0)


        def state_stop(self):
            return self.getTypedRuleContext(DECORATEParser.State_stopContext,0)


        def state_loop(self):
            return self.getTypedRuleContext(DECORATEParser.State_loopContext,0)


        def state_goto(self):
            return self.getTypedRuleContext(DECORATEParser.State_gotoContext,0)


        def getRuleIndex(self):
            return DECORATEParser.RULE_state_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_block" ):
                listener.enterState_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_block" ):
                listener.exitState_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_block" ):
                return visitor.visitState_block(self)
            else:
                return visitor.visitChildren(self)




    def state_block(self):

        localctx = DECORATEParser.State_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_state_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 102
                self.label()
                pass

            elif la_ == 2:
                self.state = 103
                self.state_command()
                pass

            elif la_ == 3:
                self.state = 104
                self.state_stop()
                pass

            elif la_ == 4:
                self.state = 105
                self.state_loop()
                pass

            elif la_ == 5:
                self.state = 106
                self.state_goto()
                pass


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DECORATEParser.T__7:
                self.state = 109
                self.match(DECORATEParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_stopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DECORATEParser.RULE_state_stop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_stop" ):
                listener.enterState_stop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_stop" ):
                listener.exitState_stop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_stop" ):
                return visitor.visitState_stop(self)
            else:
                return visitor.visitChildren(self)




    def state_stop(self):

        localctx = DECORATEParser.State_stopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_state_stop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(DECORATEParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DECORATEParser.RULE_state_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_loop" ):
                listener.enterState_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_loop" ):
                listener.exitState_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_loop" ):
                return visitor.visitState_loop(self)
            else:
                return visitor.visitChildren(self)




    def state_loop(self):

        localctx = DECORATEParser.State_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_state_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(DECORATEParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_gotoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(DECORATEParser.KEYWORD, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_state_goto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_goto" ):
                listener.enterState_goto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_goto" ):
                listener.exitState_goto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_goto" ):
                return visitor.visitState_goto(self)
            else:
                return visitor.visitChildren(self)




    def state_goto(self):

        localctx = DECORATEParser.State_gotoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_state_goto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(DECORATEParser.T__11)
            self.state = 117
            self.match(DECORATEParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(DECORATEParser.KEYWORD, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = DECORATEParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(DECORATEParser.KEYWORD)
            self.state = 120
            self.match(DECORATEParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def image(self):
            return self.getTypedRuleContext(DECORATEParser.ImageContext,0)


        def variant(self):
            return self.getTypedRuleContext(DECORATEParser.VariantContext,0)


        def ticks(self):
            return self.getTypedRuleContext(DECORATEParser.TicksContext,0)


        def image_modifier(self):
            return self.getTypedRuleContext(DECORATEParser.Image_modifierContext,0)


        def function(self):
            return self.getTypedRuleContext(DECORATEParser.FunctionContext,0)


        def getRuleIndex(self):
            return DECORATEParser.RULE_state_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_command" ):
                listener.enterState_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_command" ):
                listener.exitState_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_command" ):
                return visitor.visitState_command(self)
            else:
                return visitor.visitChildren(self)




    def state_command(self):

        localctx = DECORATEParser.State_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_state_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.image()
            self.state = 123
            self.variant()
            self.state = 124
            self.ticks()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECORATEParser.T__12) | (1 << DECORATEParser.T__13) | (1 << DECORATEParser.T__14))) != 0):
                self.state = 125
                self.image_modifier()


            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 128
                self.function()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Image_modifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DECORATEParser.RULE_image_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImage_modifier" ):
                listener.enterImage_modifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImage_modifier" ):
                listener.exitImage_modifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImage_modifier" ):
                return visitor.visitImage_modifier(self)
            else:
                return visitor.visitChildren(self)




    def image_modifier(self):

        localctx = DECORATEParser.Image_modifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_image_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DECORATEParser.T__12) | (1 << DECORATEParser.T__13) | (1 << DECORATEParser.T__14))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(DECORATEParser.KEYWORD, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_image

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImage" ):
                listener.enterImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImage" ):
                listener.exitImage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImage" ):
                return visitor.visitImage(self)
            else:
                return visitor.visitChildren(self)




    def image(self):

        localctx = DECORATEParser.ImageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_image)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(DECORATEParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_CHAR(self):
            return self.getToken(DECORATEParser.SINGLE_CHAR, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_variant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariant" ):
                listener.enterVariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariant" ):
                listener.exitVariant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariant" ):
                return visitor.visitVariant(self)
            else:
                return visitor.visitChildren(self)




    def variant(self):

        localctx = DECORATEParser.VariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_variant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(DECORATEParser.SINGLE_CHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TicksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DECORATEParser.NUMBER, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_ticks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTicks" ):
                listener.enterTicks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTicks" ):
                listener.exitTicks(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTicks" ):
                return visitor.visitTicks(self)
            else:
                return visitor.visitChildren(self)




    def ticks(self):

        localctx = DECORATEParser.TicksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ticks)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(DECORATEParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(DECORATEParser.KEYWORD, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = DECORATEParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(DECORATEParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(DECORATEParser.KEYWORD, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DECORATEParser.ValueContext)
            else:
                return self.getTypedRuleContext(DECORATEParser.ValueContext,i)


        def getRuleIndex(self):
            return DECORATEParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = DECORATEParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(DECORATEParser.KEYWORD)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DECORATEParser.T__15:
                self.state = 142
                self.match(DECORATEParser.T__15)
                self.state = 143
                self.value()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DECORATEParser.T__6:
                    self.state = 144
                    self.match(DECORATEParser.T__6)
                    self.state = 145
                    self.value()
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self.match(DECORATEParser.T__16)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DECORATEParser.NUMBER, 0)

        def getRuleIndex(self):
            return DECORATEParser.RULE_uid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUid" ):
                listener.enterUid(self)
